--- a/20191015_florida/prez_draft.Rmd
+++ b/20191015_florida/prez_draft.Rmd
@@ -61,11 +61,13 @@ __Mission__: Accelerate research and decisionmaking through data science, inform
 
 ???
 
+I am currently a 
+
 ---
 
 
-# Outline
-1. sdflkjsd
+# Talk Outline
+1. 
 1. sdlkfjs 
 1. sldfkjds
 
