--- a/uflorida2019/presentation_uf_2019.Rmd
+++ b/uflorida2019/presentation_uf_2019.Rmd
@@ -25,17 +25,63 @@ background-position: left 110px bottom 10px
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+# Harnessing the Data Revolution in Ecology*
 
-# "Harnessing the Data Revolution in Ecology"
-
-
-
-???
-- I think the ESA 2020 theme is a telling sign of the increasing importance of data curation and management in ecology.
-- 
+.footnote[[*] Ecological Society of America conference 2020 theme]
 
 ---
 
+# Data Product Flow  
+```{r echo=FALSE, out.width='100%'}
+knitr::include_graphics('/images/data_flow/slide1.png')
+```
+
+---
+
+# Data Product Flow
+```{r echo=FALSE, out.width='100%'}
+knitr::include_graphics('/images/data_flow/slide2.png')
+```
+
+---
+
+# Data Product Flow
+```{r echo=FALSE, out.width='100%'}
+knitr::include_graphics('/images/data_flow/slide3.png')
+```
+
+---
+
+# Data Product Flow
+```{r echo=FALSE, out.width='100%'}
+knitr::include_graphics('/images/data_flow/slide4.png')
+```
+
+---
+
+# Data Product Flow
+```{r echo=FALSE, out.width='100%'}
+knitr::include_graphics('/images/data_flow/slide5.png')
+```
+
+---
+
+# Core Science Analytics, Synthesis & Libraries
+</br>
+__Vision__: Synthesize and deliver Earth system data and information.
+</br></br>
+__Mission__: Accelerate research and decisionmaking through data science, information delivery, advanced computing, and biodiversity analytics.
+
+???
+
+- I am currently in an innovative branch of the USGS, in teh Core Science Systems mission area. 
+- Our team includes geologists, scientific and computer programmers, high performance computing teams, and an ecologist (raises hand)...
+- Just being in this department as the only ecologist provides a unique opportunity for me to figure out how we, as fairly untrained ecologists, can streamline our data production and development -- putting me in a unique position to serve as 
+- This also allows me to learn how to further my skills as a translational ecology
+---
+
+
+---
 
 # USGS Avian Monitoring Science Products
 <!-- ## Breeding Bird Survey -->
@@ -139,20 +185,6 @@ placebohlder for IPMs
 
 ---
 
-# Core Science Analytics, Synthesis & Libraries
-</br>
-__Vision__: Synthesize and deliver Earth system data and information.
-</br></br>
-__Mission__: Accelerate research and decisionmaking through data science, information delivery, advanced computing, and biodiversity analytics.
-
-???
-
-- I am currently in an innovative branch of the USGS, in teh Core Science Systems mission area. 
-- Our team includes geologists, scientific and computer programmers, high performance computing teams, and an ecologist (raises hand)...
-- Just being in this department as the only ecologist provides a unique opportunity for me to figure out how we, as fairly untrained ecologists, can streamline our data production and development -- putting me in a unique position to serve as 
-- This also allows me to learn how to further my skills as a translational ecology
----
-
 # Shameless Plugs
 1. R package: `bbsAssistant`  
 1. ESA 2020 : hopefully look out for an IPM session!
@@ -182,3 +214,25 @@ __Mission__: Accelerate research and decisionmaking through data science, inform
 # References
 
 bleh
+
+---
+# Extra crap
+---
+# 2. My Past and Current Research Relies on Extant Monitoring Data
+.pull-left[
+```{r echo=FALSE, out.width='100%'}
+# knitr::include_graphics('/images/ms-thesis.png')
+```
+]
+
+--
+
+.pull-right[
+```{r echo=FALSE, out.width='100%'}
+knitr::include_graphics('/images/phd-thesis.png')
+
+```
+]
+
+---
+
