--- a/uflorida2019/presentation_uf_2019.Rmd
+++ b/uflorida2019/presentation_uf_2019.Rmd
@@ -22,37 +22,6 @@ background-position: left 110px bottom 10px
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-# <!--Quote about models-->
-</br>
-
-
-> 'Most models in ecology are inteded for other ecologists, cooked up by scientists for consumption by other scientists'   _Roughgarden (1979)_
-
-.footnote[[1] Theory of population genetics and evolutionary ecology: an introduction.]
-
---
-- __data__
-
---
-- __results__
---
-
-- __papers__
---
-
-- __presentations__
-
-
-???
-- I'd like to start my talk by relaying to you one of my favorite quotes from Joan Roughgarden: "most models in ecology are intended for other ecologists, cooked up by scientists, for consuption by other scientists". 
-- When I first came across this quote -- and it definitely was a mistake because I definitely was not reading her book when I found it! -- I couldnt get it out of my head. 
-- I think we can replace the word, models, here with other words, like 'data', 'results', 'articles', 'presentations', etc.
----
-class: inverse, center, middle
-# Past and Ongoing Research 
-
----
-
 # <!--My work build --> 
 .center[</br></br>
 ```{r echo=FALSE, out.width='100%'}
@@ -148,61 +117,13 @@ knitr::include_graphics('/images/efforts/Slide13.png')
 knitr::include_graphics('/images/efforts/Slide14.png')
 ```
 ]
-
 ---
-
-# <!--My work build --> 
+# <!--Data Flow1--> 
 .center[</br></br></br></br>
 ```{r echo=FALSE, out.width='100%'}
 knitr::include_graphics('/images/my_research.png')
 ```
 ]
----
-class: inverse, center, middle
-# Turning data into actionable knowledge
----
-
-# Science Analytics & Synthesis
-</br>
-__Vision__: Synthesize and deliver Earth system data and information.
-</br></br>
-__Mission__: Accelerate research and decisionmaking through data science, information delivery, advanced computing, and biodiversity analytics.
----
-.center[
-```{r echo=FALSE, out.width='90%'}
-knitr::include_graphics('/images/sas-datascience.jpg')
-```
-]
-???
-- Briefly, I am in a group of the Core Science Systems mission area of the USGS called Science Analytics and Synthesis. 
-- Our group comprises 
-
----
-
-# Harnessing the Data Revolution in Ecology
-
-.pull-left[
-```{r echo=FALSE, out.width='90%'}
-knitr::include_graphics('/images/poisot2019.png')
-```
-]
---
-.pull-right[
-```{r echo=FALSE, out.width='100%'}
-knitr::include_graphics('/images/fair.png')
-```
-]
-
-???
-- Next year's theme is ...
-- Not surprising given the amount and quality of data. 
-- However, there's still much work to be done, especially on front of open science. 
-- that is, full reproducibilty of our data, results, and other knowledge products
-- And I have recently joined a branch within the USGS which is leading efforts to achieve such a culture within relevant sciences. 
-
----
-class: inverse, center, middle
-# Abandoning a Linear Flow of Ecological Data and Knowledge Flow
 ---
 # Data and Science Products Often Flow Linearly
 .center[
@@ -242,35 +163,103 @@ knitr::include_graphics('/images/use_continuum/Slide3.png')
 class: inverse, middle, center
 # 
 ---
-# Project Overview 
+# <!--Roughgarden Quote-->
+</br></br></br>
+> 'Most models in ecology are inteded for other ecologists, cooked up by scientists for consumption by other scientists'   _Roughgarden (1979)_  
+
+.footnote[[1] Theory of population genetics and evolutionary ecology: an introduction.]
+--
+- __data__
+
+--
+- __results__
+--
+
+- __papers__
+--
+
+- __presentations__
+
+
+???
+- I'd like to start my talk by relaying to you one of my favorite quotes from Joan Roughgarden: "most models in ecology are intended for other ecologists, cooked up by scientists, for consuption by other scientists". 
+- When I first came across this quote -- and it definitely was a mistake because I definitely was not reading her book when I found it! -- I couldnt get it out of my head. 
+- I think we can replace the word, models, here with other words, like 'data', 'results', 'articles', 'presentations', etc.
+---
+# USGS Science Analytics & Synthesis
+</br>
+__Vision__: Synthesize and deliver Earth system data and information.
+</br></br>
+__Mission__: Accelerate research and decisionmaking through data science, information delivery, advanced computing, and biodiversity analytics.
+---
+.center[
+```{r echo=FALSE, out.width='90%'}
+knitr::include_graphics('/images/sas-datascience.jpg')
+```
+]
+???
+- I recently (about 4 weeks ago today!) began a postdoc with the US Geological Survey
+- I'd love to give you a brief overview of the mission area and branch that I am in, because 
+    - I think it's a truly unique team, creating high impact foundational science products 
+    - AND 
+- Briefly, I am in a group of the Core Science Systems mission area of the USGS called Science Analytics and Synthesis. 
+---
+
+# Harnessing the Data Revolution in Ecology
+
+.pull-left[
+```{r echo=FALSE, out.width='90%'}
+knitr::include_graphics('/images/poisot2019.png')
+```
+]
+--
+.pull-right[
+```{r echo=FALSE, out.width='100%'}
+knitr::include_graphics('/images/fair.png')
+```
+]
+
+???
+- Next year's theme is ...
+- Not surprising given the amount and quality of data. 
+- However, there's still much work to be done, especially on front of open science. 
+- that is, full reproducibilty of our data, results, and other knowledge products
+- And I have recently joined a branch within the USGS which is leading efforts to achieve such a culture within relevant sciences. 
+
+---
+class: inverse, center, middle
+class: inverse, center, middle
+# Abandoning a Linear Flow of Ecological Data and Knowledge Flow
+---
+# Project Overview <!--1-->
 .center[
 ```{r echo=FALSE, out.width='100%'}
 knitr::include_graphics('/images/use_continuum/Slide4.png')
 ```
 ]
 ---
-# Project Overview 
+# Project Overview <!--2-->
 .center[
 ```{r echo=FALSE, out.width='100%'}
 knitr::include_graphics('/images/use_continuum/Slide5.png')
 ```
 ]
 ---
-# Project Overview 
+# Project Overview <!--3-->
 .center[
 ```{r echo=FALSE, out.width='100%'}
 knitr::include_graphics('/images/use_continuum/Slide6.png')
 ```
 ]
 ---
-# Project Overview 
+# Project Overview <!--4-->
 .center[
 ```{r echo=FALSE, out.width='100%'}
 knitr::include_graphics('/images/use_continuum/Slide7.png')
 ```
 ]
 ---
-# Project Overview 
+# Project Overview <!--5-->
 .center[
 ```{r echo=FALSE, out.width='100%'}
 knitr::include_graphics('/images/use_continuum/Slide8.png')
@@ -278,7 +267,7 @@ knitr::include_graphics('/images/use_continuum/Slide8.png')
 ]
 
 ---
-# Project Overview 
+# Project Overview <!--6-->
 .center[
 ```{r echo=FALSE, out.width='100%'}
 knitr::include_graphics('/images/use_continuum/Slide9.png')
@@ -287,11 +276,15 @@ knitr::include_graphics('/images/use_continuum/Slide9.png')
 
 ---
 
-class:inverse, middle, center
-# Integrated Population Modelling
+class:inverse, middle, left
+# 1. Data Integration
+# 2. Integrated Population Models
+# 3. Software
+# 4. End-user Needs
 ???
+- 
 - Over the course of my postdoc, I will be 
-Itegrated population models 
+
 ---
 # Integrated Population Models
 ```{r echo=FALSE, out.width='100%'}
