--- a/uflorida2019/presentation_uf_2019.Rmd
+++ b/uflorida2019/presentation_uf_2019.Rmd
@@ -338,3 +338,7 @@ class: inverse, center, middle
 # Fostering Communication Amongst Research, Practice, and Decision-making
 
 ---
+
+
+---
+<!-- Lowndes, J.S.S., Best, B.D., Scarborough, C., Afflerbach, J.C., Frazier, M.R., O’Hara, C.C., Jiang, N. and Halpern, B.S., 2017. Our path to better science in less time using open data science tools. Nature ecology & evolution, 1(6), p.0160. -->
